<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/icon_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title_edit_profile"
        style="@style/Text.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_title_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

    <TextView
        android:id="@+id/tv_subtitle_edit_profile"
        style="@style/Text.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_subtitle_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_profile" />

    <ImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_avatar_avocado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_edit_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Input.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/et_user_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_pic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_birthdate"
        style="@style/Input.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/et_user_birthdate"
        app:layout_constraintEnd_toEndOf="@+id/til_name"
        app:layout_constraintStart_toStartOf="@+id/til_name"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        app:startIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:paddingStart="50dp"
            android:fontFamily="@font/roboto_regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_country"
        style="@style/Input.OutlinedBox.Dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/et_user_country"
        app:layout_constraintEnd_toEndOf="@+id/til_birthdate"
        app:layout_constraintStart_toStartOf="@+id/til_birthdate"
        app:layout_constraintTop_toBottomOf="@+id/til_birthdate"
        app:startIconDrawable="@drawable/ic_flag">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/atv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:cursorVisible="false"
            android:focusable="true"
            android:paddingStart="50dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_profile"
        style="@style/Button.Primary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:text="@string/btn_save_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>