<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/icon_color"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_avatar_avocado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_name_title"
        style="@style/Text.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_profile_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_pic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_name"
        style="@style/Text.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name_title"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email_title"
        style="@style/Text.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_profile_user_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        style="@style/Text.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_email_title"
        app:layout_constraintStart_toStartOf="@+id/tv_email_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_birthdate_title"
        style="@style/Text.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_profile_birthdate"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_birthdate"
        style="@style/Text.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_birthdate_title"
        app:layout_constraintStart_toStartOf="@+id/tv_user_birthdate_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_birthdate_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_country_title"
        style="@style/Text.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_profile_user_country"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_birthdate"
        app:layout_constraintStart_toStartOf="@+id/tv_user_birthdate"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_birthdate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_country"
        style="@style/Text.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_country_title"
        app:layout_constraintStart_toStartOf="@+id/tv_country_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_country_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_profile"
        style="@style/Button.Primary"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_country"
        app:layout_constraintStart_toStartOf="@+id/tv_country" />

</androidx.constraintlayout.widget.ConstraintLayout>